--- a/node-course/notes-app/package.json
+++ b/node-course/notes-app/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.4.1",
-    "validator": "^10.8.0"
+    "validator": "^10.8.0",
+    "yargs": "^12.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^6.7.2"
   }
 }
